--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
-    "presets": ["@babel/preset-env"],
-    "plugins": [
-        "transform-object-rest-spread",
-        "transform-react-jsx"
-    ]
+  "presets": [["@babel/preset-env"]],
+  "plugins": ["transform-object-rest-spread", "transform-react-jsx"]
 }
