--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "react": "^16.4.0"
   },
   "dependencies": {
-    "babel-jest": "^26.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-icons": "^3.8.0",
-    "react-scripts": "3.1.1",
-    "webpack": "^4.12.0"
+    "react-scripts": "3.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
@@ -25,15 +23,14 @@
     "@babel/preset-env": "^7.10.2",
     "@testing-library/react": "^10.2.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^7.1.4",
+    "babel-jest": "^26.0.1",
+    "babel-loader": "^8.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.23.1",
     "identity-obj-proxy": "^3.0.0",
     "style-loader": "^0.13.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.0.4"
   },
   "keywords": [
