--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "react-icons": "^3.8.0"
   },
   "dependencies": {
-    "react": "^16.9.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-icons": "^3.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
     "@testing-library/react": "^10.2.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
@@ -34,6 +37,8 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-react": "^7.20.0",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.0.1",
+    "react-test-renderer": "^16.13.1",
     "style-loader": "^0.13.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.0.4"
@@ -49,6 +54,7 @@
   "author": "asif sharif",
   "license": "ISC",
   "jest": {
+    "testEnvironment": "node",
     "moduleNameMapper": {
       "\\.css$": "identity-obj-proxy",
       "^lodash-es$": "lodash"
