--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "react-dom": "^16.9.0",
     "react-icons": "^3.8.0"
   },
-  "dependencies": {
-    "react-icons": "^3.8.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
@@ -35,6 +33,9 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
     "react-test-renderer": "^16.13.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-icons": "^3.8.0",
     "style-loader": "^0.13.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.0.4"
