--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "ui-component"
   ],
   "author": "asif sharif",
-  "license": "ISC",
+  "license": "MIT",
   "jest": {
     "testEnvironment": "jsdom",
     "moduleNameMapper": {
