--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "@testing-library/react": "^10.4.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
@@ -32,10 +33,10 @@
     "eslint-plugin-react": "^7.20.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
-    "react-test-renderer": "^16.13.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-icons": "^3.8.0",
+    "react-test-renderer": "^16.13.1",
     "style-loader": "^0.13.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.0.4"
